# garrett

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  evaluation.cpp  evaluation.h  main.cpp  progress_indicator.cpp  progress_indicator.h  types.h  validation.cpp  validation.h
test/: CMakeLists.txt
test/instances/: 10pipe_k.cnf.xz  6s1.cnf.xz  SC21_Timetable_C_136_E_41_Cl_9_S_15.cnf.xz  SC21_Timetable_C_140_E_32_Cl_30_S_10.cnf.xz  ktf_TF-1.tf_3_0.02_34.cnf.xz  ktf_TF-1.tf_4_0.06_101.cnf.xz  ktf_TF-3.tf_2_0.02_24.cnf.xz  ktf_TF-3.tf_3_0.02_24.cnf.xz  ktf_TF-3.tf_4_0.04_48.cnf.xz  ktf_TF-4.tf_2_0.02_18.cnf.xz  ktf_TF-4.tf_4_0.04_35.cnf.xz  ktf_TF-4.tf_4_0.06_52.cnf.xz  ktf_TF-6.tf_4_0.04_51.cnf.xz  ktf_TF-6.tf_4_0.06_77.cnf.xz  ktf_TF-7.tf_3_0.06_113.cnf.xz  ktf_TF-8.tf_4_0.02_37.cnf.xz  ktf_TF-8.tf_4_0.06_109.cnf.xz  stb_531_83.apx_0.cnf.xz
